Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57197

QMediaPlayer state not updated after end of media

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.1
    • 5.7.0
    • Multimedia
    • None
    • Windows 7 (x64), Qt Creator 4.0.2, Qt5.7

    Description

      Hi Qt experts,

      According to Qt5.7 documentation, when media status is changed to EndOfMedia, the QMediaPlayer state should be StoppedState:

      Playback has reached the end of the current media. The player is in the StoppedState.

      src : http://doc.qt.io/qt-5/qmediaplayer.html#MediaStatus-enum

      However, the state is not updated in my case.

      For example, in the slot connected to QMediaPlayer::mediaStatusChanged

      I have my player's state equal to QMediaPlayer::PlayingState :

      if(status == QMediaPlayer::EndOfMedia) {
          qDebug () << this->player->state(); // QMediaPlayer::PlayingState
      }
      

      Am I missing something or is it a bug ?
      Thank you.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            darkos darkos
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes