Update player state after QMediaPlayer::EndOfMedia

Return up-to-date player state if mediaStatusChanged()
with QMediaPlayer::EndOfMedia is already received
but stateChanged() is not.

mediaStatusChanged() is always emitted first
which could cause the player to keep outdated state
before stateChanged() is received.

Task-number: QTBUG-57197
Change-Id: I0706069d2f4875076442fdf8ac7e938272ab843c
Reviewed-by: Christian Stromme <christian.stromme@qt.io>